<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@color/red2"
        android:contentDescription="@string/profile"
        android:padding="20dp"
        app:cornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/person_round"
        tools:ignore="ImageContrastCheck" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="409dp"
        android:layout_height="85dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="@color/c3"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="@color/c1"
            android:textSize="18sp"
            android:textStyle="bold" />
    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="106dp"
        android:background="@color/c1"
        android:backgroundTint="@color/c1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/text2"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:background="@android:drawable/editbox_background_normal"
                android:backgroundTint="@color/c2"
                android:gravity="center"
                android:text="@string/experience"
                android:textAlignment="center"
                android:textColor="@color/c1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/Years"
                android:textColor="@color/c4"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/text4"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:background="@android:drawable/edit_text"
                android:backgroundTint="@color/c2"
                android:gravity="center"
                android:text="@string/motivation"
                android:textColor="@color/c1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/level"
                android:textColor="@color/c4"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/c3"
        android:text="@string/share"
        android:textColor="@color/blue"
        android:textSize="11sp"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:icon="@drawable/share_24"
        app:iconGravity="textTop"
        app:iconTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>